--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "immutability-helper": "^3.1.1",
     "react": "^18.2.0",
+    "react-addons-update": "^15.6.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
